--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
         </style>
     </head>
     <body>
-        This page's JavaScript should give you a button soon. 
-        <noscript>If you see this message, you have disabled JavaScript, and this page won't work. </noscript>
+        <noscript><h1>If you see this message, you have disabled JavaScript, and this page won't work. </h1></noscript>
+        This page aims to solve the N queens problem. The problem is: 
+        <p>Given a board N * N, how can each row have a queen piece (as defined by chess games) 
+            such that no queen could touch another in the next move? </p>
+        
+        <button id="solve-it-button">Solve it!</button>
+
+        <script src="index.js"></script>
     </body>
 </html>
