--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             such that no queen could touch another in the next move? </p>
         
         <button id="solve-it-button">Solve it!</button>
-
+        <script src="n-queens.js"></script>
         <script src="index.js"></script>
+        <script src="test.js"></script>
     </body>
 </html>
